vglnk added due to text overflow in mobile problem

--- a/content/2019-06-13-bewhite.md
+++ b/content/2019-06-13-bewhite.md
@@ -13,13 +13,12 @@ backgroundPosition: 35%
 카오의 PR회사에 의하면, 가정용 세제 "어택"의 강력한 세정력이나, 사원의 일하는 방법에 배려한 기업을 "화이트 기업"이라고 부르는 것에 연유해, 프로젝트명에 "화이트"의 문구를 넣었다.
 사원을 대상으로 한 일이나 가사에 관한 앙케이트를 기본으로, 일하는 방법을 재검토하거나 가족간에 가사를 분담할 필요성을 호소하는 내용.사원이 출연하는 동영상도 공개하고 있었다.
 카오 패브릭 케어 사업부의 새로운 대처로서 12일에 사이트를 개설해, 13일에 지적이 있었다.재개 시기는 미정으로 하고 있다.
-https://www.sankei.com/life/news/190613/lif1906130036-n1.html<br><span class="jp">http://img.5ch.net/ico/monatya.gif
-花王は１３日、社内の働き方改革や家事の分担を提唱する「＃ＢｅＷＨＩＴＥ」と名付けたプロジェクトを一時休止し、関連サイトを閉鎖すると発表した。
+<a class="vglnk" href="https://www.sankei.com/life/news/190613/lif1906130036-n1.html">https://www.sankei.com/life/news/190613/lif1906130036-n1.html</a><br><span class="jp">花王は１３日、社内の働き方改革や家事の分担を提唱する「＃ＢｅＷＨＩＴＥ」と名付けたプロジェクトを一時休止し、関連サイトを閉鎖すると発表した。
 「ホワイト」は肌の色を連想させ、肯定する表現が人種差別に当たるとの指摘が社内からあったという。
 花王のＰＲ会社によると、家庭用洗剤「アタック」の強力な洗浄力や、社員の働き方に配慮した企業を「ホワイト企業」と呼ぶことにちなみ、プロジェクト名に「ホワイト」の文言を入れた。
 社員を対象にした仕事や家事に関するアンケートを基に、働き方を見直したり家族間で家事を分担したりする必要性を訴える内容。社員が出演する動画も公開していた。
 花王ファブリックケア事業部の新たな取り組みとして１２日にサイトを開設し、１３日に指摘があった。再開時期は未定としている。
-https://www.sankei.com/life/news/190613/lif1906130036-n1.html</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">2. ID: <span>VYOXYnEj0.net</span> <span title="2019/06/13(木) 20:39:30.02">2019/06/13 20:39</span></div><div style="padding-top: 10px;"><p class="content">쇼모나<br><span class="jp">しょうもな</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">5. ID: <span>eW6s9Ztf0.net</span> <span title="2019/06/13(木) 20:40:29.87">2019/06/13 20:40</span></div><div style="padding-top: 10px;"><p class="content">머리가 나쁜 회사구먼.<br><span class="jp">頭の悪い会社だな。</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">9. ID: <span>rfg7jQeh0.net</span> <span title="2019/06/13(木) 20:41:05.94">2019/06/13 20:41</span></div><div style="padding-top: 10px;"><p class="content">큐어화이트 전부 부정이야?<br><span class="jp">キュアホワイト全否定かよ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">10. ID: <span>vm7HA/cn0.net</span> <span title="2019/06/13(木) 20:41:06.48">2019/06/13 20:41</span></div><div style="padding-top: 10px;"><p class="content">화이트 앤드 화이트
+<a class="vglnk" href="https://www.sankei.com/life/news/190613/lif1906130036-n1.html">https://www.sankei.com/life/news/190613/lif1906130036-n1.html</a></span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">2. ID: <span>VYOXYnEj0.net</span> <span title="2019/06/13(木) 20:39:30.02">2019/06/13 20:39</span></div><div style="padding-top: 10px;"><p class="content">쇼모나<br><span class="jp">しょうもな</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">5. ID: <span>eW6s9Ztf0.net</span> <span title="2019/06/13(木) 20:40:29.87">2019/06/13 20:40</span></div><div style="padding-top: 10px;"><p class="content">머리가 나쁜 회사구먼.<br><span class="jp">頭の悪い会社だな。</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">9. ID: <span>rfg7jQeh0.net</span> <span title="2019/06/13(木) 20:41:05.94">2019/06/13 20:41</span></div><div style="padding-top: 10px;"><p class="content">큐어화이트 전부 부정이야?<br><span class="jp">キュアホワイト全否定かよ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">10. ID: <span>vm7HA/cn0.net</span> <span title="2019/06/13(木) 20:41:06.48">2019/06/13 20:41</span></div><div style="padding-top: 10px;"><p class="content">화이트 앤드 화이트
 도슨이라구<br><span class="jp">ホワイトアンドホワイト
 どーすんだよ</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">12. ID: <span>j44UqgpG0.net</span> <span title="2019/06/13(木) 20:41:09.54">2019/06/13 20:41</span></div><div style="padding-top: 10px;"><p class="content">그런 식으로 연상하는 편이 차별이잖아<br><span class="jp">そんなもん色から連想する方が差別だろ</span> </p></div><div class="content2"><div class="id">108. ID: <span>Ffju9FC70.net</span> <span title="2019/06/13(木) 20:56:44.11">2019/06/13 20:56</span></div><div style="padding-top: 10px;"><p class="content">혼토소우
 이런걸 차별이라고 말하는 본인이 가장 차별의식이 있지<br><span class="jp">ホントそう
