--- a/content/2019-07-05-visa.md
+++ b/content/2019-07-05-visa.md
@@ -9,12 +9,12 @@ tags:
 backgroundPosition: 35%
 ---
 <div><p class="source">출처: <a href="http://ai.2ch.sc/test/read.cgi/newsplus/1562322328" target="_blank" rel="noopener nofollow noreferrer">http://ai.2ch.sc/test/read.cgi/newsplus/1562322328</a></p><br><label for="twolang">일본어 같이보기</label><input type="checkbox" id="twolang"><br><br><div class="commentbox0"><div class="content1"><div class="id">1. ID: <span class="op">p8GJtuiY9.net</span> <span title="2019/07/05(金) 19:25:28.54">2019/07/05 19:25</span></div><div style="padding-top: 10px;"><p class="content">2019-07-05 07:12
-http://news.searchina.net/id/1680378?page=1
+<a class="vglnk" href="http://news.searchina.net/id/1680378?page=1">http://news.searchina.net/id/1680378?page=1</a>
 현재 일본 여권 소지자가 무비자 또는 어라이벌 비자로 입국할 수 있는 나라는 190개국에 달해 세계 1위를 달리고 있다.반면 세계 곳곳에서 관광객을 볼 수 있는 중국의 여권 순위는 69위로 무비자 또는 어라이벌 비자로 입국할 수 있는 나라는 74개국에 그쳤다.
 홍콩은 중국의 일부이긴 하지만 중국인이라고 해도 자유롭게 홍콩에 입경할 수는 없다.1997년 영국에서 중국으로 반환된 홍콩은 특별행정구로 일국양제가 적용돼 중국 본토와 홍콩 사이에 출입경 관리가 이뤄지고 있어 중국인이 홍콩을 자유롭게 드나들 수 없는 것이다.
 중국 매체인콰이쉰은 최근 홍콩에 체류할 수 있는 기간을 소개하는 기사를 게재하면서 일본인은 90일 체류할 수 있는데 중국인은 7일밖에 머물 수 없는 게 이상하지 않느냐고 주장했다.
 이하 소스로<br><span class="jp">2019-07-05 07:12
-http://news.searchina.net/id/1680378?page=1
+<a class="vglnk" href="http://news.searchina.net/id/1680378?page=1">http://news.searchina.net/id/1680378?page=1</a>
 現在、日本のパスポート保持者が「ビザなし」または「アライバルビザ」で入国できる国は１９０カ国に達し、世界第１位となっている。一方、世界のいたるところで観光客を見かける中国のパスポートランキングは６９位で、ビザなしまたはアライバルビザで入国できる国は７４カ国にとどまっている。
 香港は中国の一部ではあるものの、中国人といえども自由に香港に入境することはできない。１９９７年に英国から中国に返還された香港は、特別行政区として「一国二制度」が適用されているため、中国本土と香港のあいだでは出入境管理が行われていて、中国人は自由に香港に出入りできないのだ。
 中国メディアの快資訊はこのほど、香港に滞在することのできる期間を紹介する記事を掲載し、「日本人は９０日間も滞在できるのに、中国人は７日間しか滞在できないのはおかしくないか」と主張した。
