--- a/content/2020-01-30-apple.md
+++ b/content/2020-01-30-apple.md
@@ -12,11 +12,11 @@ backgroundPosition: 25%
 전체의 약 6할을 차지하는 iPhone의 매출액은 8% 늘어난 559억 5700만달러였다.중국 경기 둔화와 스마트 폰 시장의 성숙에 따른 교체 사이클의 장기화 등으로 18년 10~12월기 이후 iPhone은 수입 감소 경향이 이어졌지만, 19년 가을에 발매한 보다 넓은 범위를 촬영할 수 있는 광각 렌즈를 탑재한 최신 기종"11"시리즈가 히트하고 5분기 만에 수입 증가로 돌아섰다.
 기타 제품에서는 손목 시계형 단말"Apple Watch"와 무선 이어폰"AirPods"등을 포함한 주변 기기 부문의 매출액이 37% 늘어난 100억 1000만달러로 전체의 신장을 이끌었다.수입 감소 경향이 계속 되고 있던 하드웨어 부문 전체 매출액도 8% 늘어난 791억 400만달러로 비교 가능한 데이터가 남은 18년 10~12월 이후 처음으로 전년 동기의 실적을 웃돌았다.
 2020/1/29 7:07
-https://www.nikkei.com/article/DGXMZO54970500Z20C20A1000000/<br><span class="jp">【シリコンバレー=白石武志】米アップルが28日発表した2019年10〜12月期決算は売上高が前年同期比9%増の918億1900万ドル（約10兆円）、最終利益が11%増の222億3600万ドルだった。主力の「iPhone」が5四半期ぶりに増収となったほか、腕時計型端末「Apple Watch」などの販売も伸び、売上高と最終利益はそろって2年ぶりに過去最高を更新した。
+<a class="vglnk" href="https://www.nikkei.com/article/DGXMZO54970500Z20C20A1000000/">https://www.nikkei.com/article/DGXMZO54970500Z20C20A1000000/</a><br><span class="jp">【シリコンバレー=白石武志】米アップルが28日発表した2019年10〜12月期決算は売上高が前年同期比9%増の918億1900万ドル（約10兆円）、最終利益が11%増の222億3600万ドルだった。主力の「iPhone」が5四半期ぶりに増収となったほか、腕時計型端末「Apple Watch」などの販売も伸び、売上高と最終利益はそろって2年ぶりに過去最高を更新した。
 全体の約6割を占めるiPhoneの売上高は8%増の559億5700万ドルだった。中国景気の減速やスマートフォン市場の成熟に伴う買い替えサイクルの長期化などで18年10〜12月期以降、iPhoneは減収傾向が続いていたが、19年秋に発売したより広い範囲を撮影できる広角レンズを搭載した最新機種「11」シリーズがヒットし、5四半期ぶりに増収に転じた。
 その他の製品では腕時計型端末「Apple Watch」やワイヤレスイヤホン「AirPods」などを含む周辺機器部門の売上高が37%増の100億1000万ドルとなり、全体の伸びをけん引した。減収傾向が続いていたハードウエア部門全体の売上高も8%増の791億400万ドルとなり、比較可能なデータが残る18年10〜12月期以降で初めて前年同期の実績を上回った。
 2020/1/29 7:07
-https://www.nikkei.com/article/DGXMZO54970500Z20C20A1000000/</span> </p></div><div class="content2"><div class="id">21. ID: <span>gZsM2ccb.net</span> <span title="2020/01/29(水) 08:33:37">2020/01/29 08:33</span></div><div style="padding-top: 10px;"><p class="content">iOS13은 탈탈이 OS 내어 놓고?<br><span class="jp">iOS13なんてポンコツOS出しといてか</span> </p></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">2. ID: <span>2NzFDmLj.net</span> <span title="2020/01/29(水) 07:31:32.97">2020/01/29 07:31</span></div><div style="padding-top: 10px;"><p class="content">분기에 이건 위험하다<br><span class="jp">四半期でこれってやばない</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">4. ID: <span>+kTAlaGz.net</span> <span title="2020/01/29(水) 07:37:42.68">2020/01/29 07:37</span></div><div style="padding-top: 10px;"><p class="content">변함없이 굉장해<br><span class="jp">相変わらずすげーな</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">5. ID: <span>DOO4e10O.net</span> <span title="2020/01/29(水) 07:40:33.99">2020/01/29 07:40</span></div><div style="padding-top: 10px;"><p class="content">바보 왠지 꼭 에어팟 하고 다니네.<br><span class="jp">アホって何故かかならず AirPodsしてるよな</span> </p></div><div class="content2"><div class="id">12. ID: <span>/r0KbcWb.net</span> <span title="2020/01/29(水) 08:03:58.25">2020/01/29 08:03</span></div><div style="padding-top: 10px;"><p class="content">산책 수행원으로는 최고야
+<a class="vglnk" href="https://www.nikkei.com/article/DGXMZO54970500Z20C20A1000000/">https://www.nikkei.com/article/DGXMZO54970500Z20C20A1000000/</a></span> </p></div><div class="content2"><div class="id">21. ID: <span>gZsM2ccb.net</span> <span title="2020/01/29(水) 08:33:37">2020/01/29 08:33</span></div><div style="padding-top: 10px;"><p class="content">iOS13은 탈탈이 OS 내어 놓고?<br><span class="jp">iOS13なんてポンコツOS出しといてか</span> </p></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">2. ID: <span>2NzFDmLj.net</span> <span title="2020/01/29(水) 07:31:32.97">2020/01/29 07:31</span></div><div style="padding-top: 10px;"><p class="content">분기에 이건 위험하다<br><span class="jp">四半期でこれってやばない</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">4. ID: <span>+kTAlaGz.net</span> <span title="2020/01/29(水) 07:37:42.68">2020/01/29 07:37</span></div><div style="padding-top: 10px;"><p class="content">변함없이 굉장해<br><span class="jp">相変わらずすげーな</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">5. ID: <span>DOO4e10O.net</span> <span title="2020/01/29(水) 07:40:33.99">2020/01/29 07:40</span></div><div style="padding-top: 10px;"><p class="content">바보 왠지 꼭 에어팟 하고 다니네.<br><span class="jp">アホって何故かかならず AirPodsしてるよな</span> </p></div><div class="content2"><div class="id">12. ID: <span>/r0KbcWb.net</span> <span title="2020/01/29(水) 08:03:58.25">2020/01/29 08:03</span></div><div style="padding-top: 10px;"><p class="content">산책 수행원으로는 최고야
 라디오 스피커에서 소리내어 걷는 배짱은 없으니까,
 라디오 소리를 에어팟에 틀어 귀에서 우동 흘리면서 걷고 있어<br><span class="jp">散歩のお供には最高だよ
 ラジオのスピーカーから音を出して歩くような度胸はないから、
