--- a/content/2020-01-31-manga.md
+++ b/content/2020-01-31-manga.md
@@ -24,7 +24,7 @@ backgroundPosition: 25%
 해적판이 판치는 상황은 지금도 크게 달라지지 않은 상황이다.
 현재 해적판 사이트 수는 500개 이상.이 중 상위 10개 사이트의 이용 인원은 월간 총 6500만 수 이른다.
 아카마츠씨는 "(출판사등이 제공하는) 공식 서비스로 옮긴 사람도 많지만, 그런데도 해적판을 사용하고 있는 사람은 지금도 매우 많다"라고 이야기한다.
-https://www.sankei.com/entertainments/news/200129/ent2001290001-n1.html<br><span class="jp">「漫画村」閉鎖後も止まない海賊版被害　「発売翌日に無断公開」漫画家苦言
+<a class="vglnk" href="https://www.sankei.com/entertainments/news/200129/ent2001290001-n1.html">https://www.sankei.com/entertainments/news/200129/ent2001290001-n1.html</a><br><span class="jp">「漫画村」閉鎖後も止まない海賊版被害　「発売翌日に無断公開」漫画家苦言
 「海賊版の被害に、漫画家は怒っています」。
 著者らの許可なく漫画作品などをインターネット上で公開し、いまだ深刻な悪影響を及ぼす「海賊版サイト」。
 その対策として開かれた文化庁の有識者検討会が今月中旬に報告書をまとめ、議論の場は国会へと移る。
@@ -40,7 +40,7 @@ https://www.sankei.com/entertainments/news/200129/ent2001290001-n1.html<br><span
 海賊版がはびこる状況は今もそう変わっていないのが現状だ。
 現在、海賊版サイトの数は５００以上。このうち上位１０サイトの利用人数は月間のべ６５００万人に上る。
 赤松さんは「（出版社などが提供する）公式サービスに移った人も多いが、それでも海賊版を使っている人は今も非常に多い」と話す。
-https://www.sankei.com/entertainments/news/200129/ent2001290001-n1.html</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">5. ID: <span>QhvlxErbr.net</span> <span title="2020/01/31(金) 15:43:23">2020/01/31 15:43</span></div><div style="padding-top: 10px;"><p class="content">말할정도로 만화같은거 읽냐?<br><span class="jp">言うほどマンガなんか読むか？</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">6. ID: <span>S1wyv1AGd.net</span> <span title="2020/01/31(金) 15:44:23">2020/01/31 15:44</span></div><div style="padding-top: 10px;"><p class="content">귀멸 에어프인가?<br><span class="jp">鬼滅エアプか？</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">9. ID: <span>HU3ffwBc0.net</span> <span title="2020/01/31(金) 15:46:09">2020/01/31 15:46</span></div><div style="padding-top: 10px;"><p class="content">하는 일이 음악업계와 함께<br><span class="jp">やってることが音楽業界と一緒</span> </p></div><div class="content2"><div class="id">220. ID: <span>b2smTxSgd.net</span> <span title="2020/01/31(金) 16:17:50">2020/01/31 16:17</span></div><div style="padding-top: 10px;"><p class="content">쟈스락-타마나와에조차 기가 막힌것이 출판업계야<br><span class="jp">ジャスラック玉縄にすら呆れられたのが出版業界なんだよなぁ</span> </p></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">12. ID: <span>S4UEE2oxd.net</span> <span title="2020/01/31(金) 15:46:30">2020/01/31 15:46</span></div><div style="padding-top: 10px;"><p class="content">만화촌 유저에게 있어서는 무료니까 읽는것이지, 일부러 살 정도는 아닌것이라는 것이나<br><span class="jp">漫画村ユーザにとっては無料だから読むのであって、わざわざ買うほどでもないものってことや</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">14. ID: <span>zV/T4QeT0.net</span> <span title="2020/01/31(金) 15:46:59">2020/01/31 15:46</span></div><div style="padding-top: 10px;"><p class="content">만화란건 비싸네.
+<a class="vglnk" href="https://www.sankei.com/entertainments/news/200129/ent2001290001-n1.html">https://www.sankei.com/entertainments/news/200129/ent2001290001-n1.html</a></span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">5. ID: <span>QhvlxErbr.net</span> <span title="2020/01/31(金) 15:43:23">2020/01/31 15:43</span></div><div style="padding-top: 10px;"><p class="content">말할정도로 만화같은거 읽냐?<br><span class="jp">言うほどマンガなんか読むか？</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">6. ID: <span>S1wyv1AGd.net</span> <span title="2020/01/31(金) 15:44:23">2020/01/31 15:44</span></div><div style="padding-top: 10px;"><p class="content">귀멸 에어프인가?<br><span class="jp">鬼滅エアプか？</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">9. ID: <span>HU3ffwBc0.net</span> <span title="2020/01/31(金) 15:46:09">2020/01/31 15:46</span></div><div style="padding-top: 10px;"><p class="content">하는 일이 음악업계와 함께<br><span class="jp">やってることが音楽業界と一緒</span> </p></div><div class="content2"><div class="id">220. ID: <span>b2smTxSgd.net</span> <span title="2020/01/31(金) 16:17:50">2020/01/31 16:17</span></div><div style="padding-top: 10px;"><p class="content">쟈스락-타마나와에조차 기가 막힌것이 출판업계야<br><span class="jp">ジャスラック玉縄にすら呆れられたのが出版業界なんだよなぁ</span> </p></div></div></div></div><div class="commentbox1"><div class="content1"><div class="id">12. ID: <span>S4UEE2oxd.net</span> <span title="2020/01/31(金) 15:46:30">2020/01/31 15:46</span></div><div style="padding-top: 10px;"><p class="content">만화촌 유저에게 있어서는 무료니까 읽는것이지, 일부러 살 정도는 아닌것이라는 것이나<br><span class="jp">漫画村ユーザにとっては無料だから読むのであって、わざわざ買うほどでもないものってことや</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">14. ID: <span>zV/T4QeT0.net</span> <span title="2020/01/31(金) 15:46:59">2020/01/31 15:46</span></div><div style="padding-top: 10px;"><p class="content">만화란건 비싸네.
 월 수백엔에서 동영상 마음껏 보세요의 시대에 한권 600엔이나 코스파 나쁜<br><span class="jp">漫画って高いやん
 月額数百円で動画見放題の時代に一冊600円とかコスパ悪い</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">16. ID: <span>CgVzmZkHd.net</span> <span title="2020/01/31(金) 15:47:08">2020/01/31 15:47</span></div><div style="padding-top: 10px;"><p class="content">다음에는 편의점 서서 보는 거 규제하는 거야?<br><span class="jp">次はコンビニの立ち読み規制するんか？</span> </p></div></div></div><div class="commentbox1"><div class="content1"><div class="id">18. ID: <span>DVMCnzkL0.net</span> <span title="2020/01/31(金) 15:47:17">2020/01/31 15:47</span></div><div style="padding-top: 10px;"><p class="content">만화책만 서브스크 할수가없어 정말노력해줘<br><span class="jp">漫画だけサブスクできないのほんま努力してくれ</span> </p></div><div class="content2"><div class="id">24. ID: <span>S4UEE2oxd.net</span> <span title="2020/01/31(金) 15:48:22">2020/01/31 15:48</span></div><div style="padding-top: 10px;"><p class="content">흔한 매일 회복하는 동전으로 읽을 수 있는 녀석은 오래되거나, 동인지 레벨의 만화 밖에 없고<br><span class="jp">よくある毎日回復するコインで読めるやつはクッソ古かったり、同人誌レベルの漫画しか置いてないしな</span> </p></div></div><div class="content2"><div class="id">197. ID: <span>8I8+ShoFr.net</span> <span title="2020/01/31(金) 16:15:35">2020/01/31 16:15</span></div><div style="padding-top: 10px;"><p class="content">마가뽀케 사와라<br><span class="jp">マガポケ買え</span> </p></div></div><div class="content2"><div class="id">208. ID: <span>Hut4pKvBd.net</span> <span title="2020/01/31(金) 16:16:44">2020/01/31 16:16</span></div><div style="padding-top: 10px;"><p class="content">코믹DAYS는?<br><span class="jp">コミックDAYSは？</span> </p></div></div><div class="content2"><div class="id">420. ID: <span>aXgtxj5E0.net</span> <span title="2020/01/31(金) 16:37:31">2020/01/31 16:37</span></div><div style="padding-top: 10px;"><p class="content">일본은 저작권이 개인 개인에게 집중되어 있으니까 말이야.
 서브스크 하는데도 각각 허락이 안된다면 감시하고
